force-app/main/default/objects/Incident__c/fields/Incident_details__c.field-meta.xml
<CustomField>
    <fullName>Incident_details__c</fullName>
    <label>Incident details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>