force-app/main/default/objects/Incident__c/fields/incident_Type__c.field-meta.xml
<CustomField>
    <fullName>incident_Type__c</fullName>
    <label>incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>