force-app/main/default/objects/Incident__c/fields/Service_Restore_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Restore_Reason__c</fullName>
    <label>Service Restore Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>