force-app/main/default/objects/Incident__c/fields/Service_Restored__c.field-meta.xml
<CustomField>
    <fullName>Service_Restored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Restored</label>
    <type>Checkbox</type>
</CustomField>